--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="70dp"
             android:text="1"
+            android:onClick="setvariable"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -40,6 +41,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="70dp"
             android:text="2"
+            android:onClick="setvariable"
             app:layout_constraintStart_toEndOf="@+id/button1"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -50,6 +52,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="70dp"
             android:text="3"
+            android:onClick="setvariable"
             app:layout_constraintStart_toEndOf="@+id/button2"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -60,6 +63,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="70dp"
             android:text="/"
+            android:onClick="operator"
             app:layout_constraintStart_toEndOf="@+id/button3"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -69,6 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
             android:text="4"
+            android:onClick="setvariable"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button1" />
 
@@ -79,6 +84,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="60dp"
             android:text="5"
+            android:onClick="setvariable"
             app:layout_constraintStart_toEndOf="@+id/button4"
             app:layout_constraintTop_toBottomOf="@+id/button2" />
 
@@ -89,6 +95,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="60dp"
             android:text="6"
+            android:onClick="setvariable"
             app:layout_constraintStart_toEndOf="@+id/button5"
             app:layout_constraintTop_toBottomOf="@+id/button3" />
 
@@ -99,6 +106,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="60dp"
             android:text="*"
+            android:onClick="operator"
             app:layout_constraintStart_toEndOf="@+id/button6"
             app:layout_constraintTop_toBottomOf="@+id/button_divide" />
 
@@ -108,6 +116,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
             android:text="7"
+            android:onClick="setvariable"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button4" />
 
@@ -118,6 +127,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="60dp"
             android:text="8"
+            android:onClick="setvariable"
             app:layout_constraintStart_toEndOf="@+id/button7"
             app:layout_constraintTop_toBottomOf="@+id/button5" />
 
@@ -128,6 +138,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="60dp"
             android:text="9"
+            android:onClick="setvariable"
             app:layout_constraintStart_toEndOf="@+id/button8"
             app:layout_constraintTop_toBottomOf="@+id/button6" />
 
@@ -138,6 +149,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="60dp"
             android:text="+"
+            android:onClick="operator"
             app:layout_constraintStart_toEndOf="@+id/button9"
             app:layout_constraintTop_toBottomOf="@+id/button_mul" />
 
@@ -147,6 +159,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
             android:text="0"
+            android:onClick="setvariable"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button7" />
 
@@ -156,6 +169,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
             android:text="^"
+            android:onClick="operator"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button0" />
 
@@ -166,6 +180,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="60dp"
             android:text="-"
+            android:onClick="operator"
             app:layout_constraintStart_toEndOf="@+id/button_percent"
             app:layout_constraintTop_toBottomOf="@+id/button_plus" />
 
@@ -186,6 +201,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="60dp"
             android:text="%"
+            android:onClick="operator"
             app:layout_constraintStart_toEndOf="@+id/button_dot"
             app:layout_constraintTop_toBottomOf="@+id/button9" />
 
@@ -195,6 +211,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="60dp"
+            android:onClick="Clear"
             android:text="C"
             app:layout_constraintStart_toEndOf="@+id/butto_power"
             app:layout_constraintTop_toBottomOf="@+id/button_dot" />
@@ -206,6 +223,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="60dp"
             android:text="="
+            android:onClick="FinalOutput"
             app:layout_constraintStart_toEndOf="@+id/button_clear"
             app:layout_constraintTop_toBottomOf="@+id/button_percent" />
 
